<resources>
    <string name="app_name" translatable="false">Impartus Downloader</string>
    <string name="base_url">https://a.impartus.com</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="app_logo">App Logo</string>
    <string name="url">URL</string>
    <string name="topic">topic</string>
    <string name="faculty">faculty</string>
    <string name="subject">Subject</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="tracks">Tracks</string>
    <string name="flipped">Flipped</string>
    <string name="three_dots">&#8942;</string>
    <string name="impartus_url">Impartus url</string>
    <string name="zero_percent">0%</string>
    <string name="settings">Settings</string>
    <string name="download_video">Download Video</string>
    <string name="show_logs">Show Logs</string>
    <string name="play_video">Play Video</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="error_authenticating">Error authenticating with Impartus.</string>
</resources>