<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    >

    <EditText
        android:id="@+id/url"
        android:layout_width="350sp"
        android:layout_height="48sp"
        android:hint="@string/impartus_url"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="120sp"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:inputType="textUri"
        android:text="@string/base_url"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350sp"
        android:layout_height="48sp"
        android:layout_below="@+id/url"
        android:layout_marginBottom="20sp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:autofillHints="Email">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="350sp"
        android:layout_height="48sp"
        android:layout_marginBottom="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/username"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="Password">
    </EditText>

    <TextView
        android:id="@+id/failed_login"
        android:layout_width="300sp"
        android:layout_height="20sp"
        android:layout_marginBottom="0sp"
        android:layout_alignStart="@id/password"
        android:layout_below="@+id/password"
        android:text="@string/error_authenticating"
        android:textColor="#cd2931"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login"
        android:layout_width="100sp"
        android:layout_height="48sp"
        android:layout_marginBottom="20sp"
        android:layout_alignEnd="@id/password"
        android:onClick="onClickLoginButton"
        android:layout_below="@+id/password"
        />

</RelativeLayout>