<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:fadingEdgeLength="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:id="@+id/horizontal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:minEms="12"
                android:maxEms="16"
                android:text="@string/topic"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="48dp"
                android:layout_height="48dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/circle_shape"
                    android:indeterminate="false"
                    android:max="100"
                    android:padding="0dp"
                    android:progress="0"
                    android:progressDrawable="@drawable/custom_progressbar"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            <TextView
                android:id="@+id/progressBarText"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:visibility="invisible"
                android:background="#00000000"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:gravity="center"
                android:text="@string/zero_percent"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/contextMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:padding="4dp"
                android:minEms="2"
                android:gravity="center"
                android:layout_margin="2dp"
                android:text="@string/three_dots"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vertical1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_layout" >


            <TextView
                android:id="@+id/faculty"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:text="@string/faculty"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/subject"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:minHeight="72dp"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:text="@string/subject"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vertical2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/vertical1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_layout" >

            <TextView
                android:id="@+id/date"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:text="@string/date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:text="@string/duration"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tracks"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:text="@string/tracks"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/flipped"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:text="@string/flipped"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>